cloud-devops-projects/project-2-aws-eks-microservices/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: devops-demo
spec:
  type: LoadBalancer
  selector:
    app: web-app
  ports:
    - port: 80
      targetPort: 80
